# homecare-ai-mvp

./: .ai_task_state.json  .env.example  .gitignore  ARCHITECTURE.md  Claude.MD  DEPLOYMENT.md  PALMCARE_APP_BRIEF.txt  README.md  ROADMAP.txt  browser-stress-test.html  canadian_home_care_agencies.json  docker-compose.yml  home_care_agency_leads.json  investors.json  new_investors_batch2.json  package-lock.json  package.json  railway.json  renovate.json5
.venv311/: pyvenv.cfg
android/: build.gradle.kts  gradlew  local.properties  settings.gradle.kts
apps/api/: .dockerignore  Dockerfile  pyproject.toml  railway.json
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  cookies.py  deps.py  encryption.py  internal_auth.py  logging.py  oauth.py  rate_limit.py  security.py  tier_limits.py
apps/api/app/db/: base.py  session.py  types.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 001_initial.py  002_business_auth.py  003_calls.py  004_transcript_source.py  005_caregivers_table.py  006_agency_settings.py  007_agency_settings_extended.py  008_client_extended_columns.py  009_admin_features.py  010_google_calendar.py  011_voiceprint.py  012_user_company_name.py  013_client_data_isolation.py  014_update_pricing_plans.py  015_caregiver_data_isolation.py  016_settings_data_isolation.py  017_force_logout_at.py  018_password_reset.py  019_add_missing_indexes.py  020_incidents.py  021_reprice_per_seat.py  022_contract_templates.py  023_sales_leads.py  024_cert_tracking_smart_notes.py  025_email_sequences_and_analytics.py  026_hipaa_mfa_password_history.py  027_investors.py  028_agency_billing_config.py  029_team_permissions.py  030_call_tracking_callbacks_assignments.py  031_site_events.py  032_email_sender.py  033_business_user_2fa.py
apps/api/app/middleware/: __init__.py  audit.py
apps/api/app/models/: __init__.py  agency_settings.py  analytics.py  audio_asset.py  audit_log.py  billable_item.py  business.py  call.py  caregiver.py  client.py  contract.py  contract_template.py  device_token.py  diarization_turn.py  incident.py  investor.py  messaging.py  note.py  reminder.py  sales_lead.py  smart_note.py  subscription.py  support_ticket.py  task.py  transcript_segment.py  user.py  visit.py
apps/api/app/routers/: admin.py  admin_platform.py  agency.py  agent.py  analytics.py  apple_iap.py  auth.py  beta.py  billing.py  business_auth.py  calendar.py  calls.py  caregivers.py  clients.py  contract_templates.py  contracts.py  demos.py  diarization.py  documents.py  drive.py  email_sender.py  exports.py  gmail.py  integrations.py  investors.py  landing_chat.py  live_stream.py  live_transcribe.py  messaging.py  mfa.py  notes.py  notifications.py  outreach.py  pipeline.py  reports.py  resend_webhooks.py  sales_leads.py  scheduler.py  smart_notes.py  status.py  (+9 more)
apps/api/app/routers/admin/: __init__.py  businesses.py  common.py  maintenance.py  quick_setup.py
apps/api/app/routers/admin_platform/: __init__.py  analytics.py  common.py  compliance.py  schemas.py  support.py  system.py  users.py
apps/api/app/routers/agent/: __init__.py  prompts.py  routes.py  tool_schemas.py  tools.py
apps/api/app/routers/business_auth/: __init__.py  common.py  login.py  magic_link.py  profile.py  registration.py  team.py
apps/api/app/routers/contract_templates/: __init__.py  common.py  crud.py  detail.py  gallery.py  schemas.py
apps/api/app/routers/investors/: __init__.py  common.py  routes.py  schemas.py  seed_data.py
apps/api/app/routers/outreach/: __init__.py  calls.py  common.py  digest.py  drafts.py  maintenance.py  plan.py  schemas.py
apps/api/app/routers/sales_leads/: __init__.py  campaigns.py  common.py  crud.py  detail.py  email_actions.py  internal.py  schemas.py
apps/api/app/routers/scheduler/: __init__.py  common.py  demos.py  goals.py  marketing.py  schemas.py  territory.py
apps/api/app/routers/stripe_billing/: __init__.py  admin.py  billing.py  checkout.py  common.py  plans.py  schemas.py  signup.py  webhooks.py
apps/api/app/schemas/: __init__.py  auth.py  billing.py  business.py  call.py  caregiver.py  client.py  contract.py  diarization.py  export.py  incident.py  note.py  smart_note.py  transcript.py  upload.py  user.py  visit.py
apps/api/app/services/: audit.py  billing_rules.py  contract_generation.py  document_generation.py  document_storage.py  email.py  email_sender.py  jobs.py  note_generation.py  ocr_template_scanner.py  push.py  sos_verification.py  storage.py  storage_cleanup.py  twilio_calls.py
apps/api/app/services/document_generation/: __init__.py  docx_render.py  docx_templates.py  pdf_render.py  placeholders.py
apps/api/app/utils/: text.py  time.py
apps/api/scripts/: auth_impact_preflight.py  cleanup_orphaned_audio.py  seed.py  send_lifecycle_push.py
apps/api/templates/contracts/: basic_home_care_contract.docx  basic_home_care_contract_meta.json  palmcare_service_agreement.docx  palmcare_service_agreement_meta.json  skilled_nursing_agreement.docx  skilled_nursing_agreement_meta.json
competitor-profiles/: _summary.md
compliance/: 01-RISK-ASSESSMENT.md  02-PRIVACY-POLICY.md  03-SECURITY-POLICY.md  04-BREACH-NOTIFICATION-POLICY.md  05-BAA-TEMPLATE.md  06-VENDOR-BAA-TRACKER.md  07-TECHNICAL-SAFEGUARDS-AUDIT.md  08-WORKFORCE-TRAINING-PLAN.md  README.md
data/: investors.json  investors_crm.json  ne_ia_home_care_agencies_research.csv  new_investors_batch2.json  new_investors_research.json
docs/: AGENT_SKILLS.md  API_COST_MODEL.md  APP_STORE_LAUNCH_PLAN.md  APP_STORE_SUBMISSION.md  ARCHITECTURE.md  DATA_FLOWS.md  INVESTOR_MEMO.md  PALMCARE_ROADMAP.txt  POSTHOG_WAREHOUSE_RUNBOOK.md  STRESS_TEST_REPORT.md  data_flows.md  marketing-research.md  state-assessment-requirements.md  voice-agent-mobile-app-plan.md
ios-app/: project.yml
marketing/: PALM_BRAND_VOICE.md  appstore-metadata.md  asset-overview.md  content-calendar-month-july.md  content-calendar-week.md  palmcare-brain-phone.html  sage-style-campaign.md  social-media-copy.md  social-media-graphics.md  week-preview.html
mobile/: app.json  (+3 more)
(+660 files in other folders)
