[project]
name = "palmcare-api"
version = "0.1.0"
description = "AI Voice Analyzer API for In-Home Healthcare"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    # CVE-2024-24762: starlette parses multipart slowly. python-multipart 0.0.9+ fixes upstream.
    "python-multipart>=0.0.18",
    "boto3>=1.34.0",
    "celery[redis]>=5.4.0",
    "redis>=5.1.0",
    "python-docx>=1.1.2",
    "httpx>=0.27.0",
    # urllib3<2.5 has GHSA-pq67-6m6q-mj2v (PoolManager redirect issue)
    "urllib3>=2.5.0",
    # requests<2.32 has GHSA-9wx4-h78v-vm56 (Session.verify bypass)
    "requests>=2.32.0",
    # Pillow<10.3 has CVE-2024-28219 (buffer overflow), <11.3 fixed CVE-2025-48433
    "pillow>=11.3.0",
    # python-dotenv<1.1 has parser issues w/ shell-style quoting
    "python-dotenv>=1.1.1",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "reportlab>=4.2.0",
    "resend>=2.4.0",
    "stripe>=10.0.0",
    "app-store-server-library>=1.5.0",
    "cryptography>=44.0.0",
    "pyotp>=2.9.0",
    "websockets>=13.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ["py311"]
